--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Index</title>
 </head>
 <body>
-    
+    <header>
+        <a href="">Home</a>
+        <a href="">Tech Stack</a>
+        
+   </header>
 </body>
 </html>
