added education file
added education file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <header>
         <a href="">Home</a>
         <a href="">Tech Stack</a>
-        
+        <a href="">Education</a>
+        <a href="">Project</a>
    </header>
 </body>
 </html>
