--- a/index.html
+++ b/index.html
@@ -1,17 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index</title>
-</head>
-<body>
+  </head>
+  <body>
+    <!-- Header Sectio -->
     <header>
-        <a href="">Home</a>
-        <a href="">Tech Stack</a>
-        <a href="">Education</a>
-        <a href="">Project</a>
-   </header>
-</body>
+      <span
+        >Name:Rucha &nbsp;&nbsp;&nbsp; Mobile:9214783436&nbsp;&nbsp;&nbsp;
+        Email:abc@gmail.com</span
+      >
+    </header>
+    <hr />
+    <!-- Navigation Section -->
+    <nav>
+      <a href="home.html" target="myframe">HOME</a> &nbsp;&nbsp;&nbsp;
+      <a href="teckStack.html" target="myframe">TECH STACK</a> &nbsp;&nbsp;&nbsp;
+      <a href="project.html" target="myframe">PROJECT</a> &nbsp;&nbsp;&nbsp;
+      <a href="education.html" target="myframe">EDUCATION</a> &nbsp;&nbsp;&nbsp;
+      <a href="others.html" target="myframe">OTHERS</a> &nbsp;&nbsp;&nbsp;
+    </nav>
+    <!--Body Section-->
+    <iframe
+      src="home.html"
+      name="myframe"
+      frameborder="1"
+      height="450px"
+      width="900px"
+     ></iframe>
+     <br>
+      <!-- Fotter Section -->
+      <a href="https://www.linkedin.com/login">LinkedIn</a>&nbsp;&nbsp;
+      <a href="https://github.com/">GitHub</a>&nbsp;&nbsp;
+      <a href="https://www.naukri.com/">Naukari</a>
+    </footer>
+  </body>
 </html>
