--- a/home.html
+++ b/home.html
@@ -5,15 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HOME</title>
+    <style>
+      h1{
+        color: rgb(120, 69, 119) ;
+        background-color:rgb(227, 202, 202);}
+        #angular{
+        color:rgb(222, 42, 42);
+
+        }
+     #web{
+       color:rgb(157, 14, 14);
+       background-color:rgb(183, 208, 159)
+      };
+      
+    </style>
   </head>
   <body>
+    <h1>Career Objectives</h1>
+    <p>TO WORK IN ORGANIZATION WHERE I CAN LEARNAND GROW MY SKILLLS AND HELP ORGANIZATIONAL GROWTH</p>
     <h1>Professional Summary</h1>
     <ul>
       <li>
         Having 5 years of experience in devloping Single page Web Application
-        using Angular 13,HTML5,CSS,Bootstrap,JavaScript,ES6,TypeScript
+        using <span id="angular">Angular 8</span>,HTML5,CSS,Bootstrap,JavaScript,ES6,TypeScript
       </li>
-      <li>Experience on working with version control system-GIT and GitHub</li>
+      <li id="web">Experience on working with version control system-GIT and GitHub</li>
       <li>Experience working with JIRA for user stories and bug tracking</li>
       <li>
         Strong Debugging & Troubleshooting code experience using Chrome Devloper
