--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index</title>
+   <style>
+     #header{
+      color:rgb(157, 14, 14);
+       background-color:rgb(183, 208, 159)
+     }
+   </style>
   </head>
   <body>
     <!-- Header Sectio -->
     <header>
-      <span
-        >Name:Rucha &nbsp;&nbsp;&nbsp; Mobile:9214783436&nbsp;&nbsp;&nbsp;
+      <span id="header"> Name:Rucha Sharma&nbsp;&nbsp;&nbsp; Mobile:9214783436&nbsp;&nbsp;&nbsp;
         Email:abc@gmail.com</span
       >
     </header>
@@ -29,13 +34,13 @@
       name="myframe"
       frameborder="1"
       height="450px"
-      width="900px"
+      width="1100px"
      ></iframe>
      <br>
       <!-- Fotter Section -->
       <a href="https://www.linkedin.com/login">LinkedIn</a>&nbsp;&nbsp;
       <a href="https://github.com/">GitHub</a>&nbsp;&nbsp;
-      <a href="https://www.naukri.com/">Naukari</a>
+      <a href="https://www.naukri.com/">Naukari</a>&nbsp;&nbsp;
     </footer>
   </body>
 </html>
