--- a/others.html
+++ b/others.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>Profile Photo:</h2>
-  <img src="Profile.png" alt="Profile photo"></p>
+  <img src="assets/Profile.png" alt="Profile photo"></p>
   <strong>Name:</strong>Rucha Sharma <br>
   <strong>Mobile:</strong>9253 4567 25 <br>
   <strong>Email:</strong>ruchasharma@gmail.com <br>
