--- a/cssLearning.html
+++ b/cssLearning.html
@@ -1,51 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Learning</title>
     <style>
-        /* Name Selector */
-         p{
-          color: cadetblue;  
-        } 
-        /* Id Selector */
-        #java{
-            color: cadetblue;
-            font-size: larger;
-        }
-        /* Class Selector */
-        .nonDeveloper{
-            color: chocolate;
-            font-weight: bold;
-        }
-        /* Combinator Selector */
-         #java,.nonDeveloper{
-            background-color: cornflowerblue;
-        } 
-        #web{
-            color: cornflowerblue;
-        } 
-        #learning{
-            text-decoration: underline;
-            font-size: larger;
-            font-weight: bolder;
-            text-transform: capitalize;
-            color: rgb(187, 123, 5);
-            text-align: left;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        }
+      /* Name Selector */
+      p {
+        color: cadetblue;
+      }
+      /* Id Selector */
+      #java {
+        color: cadetblue;
+        font-size: larger;
+      }
+      /* Class Selector */
+      .nonDeveloper {
+        color: chocolate;
+        font-weight: bold;
+      }
+      /* Combinator Selector */
+      #java,
+      .nonDeveloper {
+        background-color: cornflowerblue;
+      }
+      #web {
+        color: cornflowerblue;
+      }
+      #learning {
+        text-decoration: underline;
+        font-size: larger;
+        font-weight: bolder;
+        text-transform: capitalize;
+        color: rgb(187, 123, 5);
+        text-align: left;
+        font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+      }
     </style>
-</head>
-<body>
-    <h2 style="color:orange; background-color: aqua;"> Professional Summary</h2>
-    <p> I am UI Developer </p>
-    <p> I am Java Developer</p>
-    <p> I am Test Engineer</p>
-    <h2> Skills  </h2>
-    <p> HTML and CSS </p>
-    <p> JavaScript </p>
-    <p> I am very good in <span id="web"> Web Development </span>  and DSA </p>
+  </head>
+  <body>
+    <h2 style="color: orange; background-color: aqua">Professional Summary</h2>
+    <p>I am UI Developer</p>
+    <p>I am Java Developer</p>
+    <p>I am Test Engineer</p>
+    <h2>Skills</h2>
+    <p>HTML and CSS</p>
+    <p>JavaScript</p>
+    <p>I am very good in <span id="web"> Web Development </span> and DSA</p>
     <p id="learning">I am learning CSS and enjoying too</p>
-</body>
+  </body>
 </html>
