--- a/education.html
+++ b/education.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education</title>
     <style>
-        table,thead,th,td,tr,tbody{border: 1px solid black;}
+         h2{
+          color:rgb(200, 79, 35);
+          
+        }
+        table,thead,th,td,tr,tbody{
+            border-collapse: collapse;
+            padding: 20px;
+            border: 2px solid black
+        }
     </style>
 </head>
 <body>
