--- a/project.html
+++ b/project.html
@@ -5,20 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project</title>
+    <style>
+      #web{
+        text-decoration: underline;
+      }
+       #angular{
+        background-color:rgb(225, 225, 107);
+      }
+      #navigation{
+        padding-right:10px;
+      }
+      #ang{
+        padding-right: 25px;
+      }
+    </style>
   </head>
   <body>
     <h2>Project Details</h2>
     <hr />
 
-    <strong>Name: &nbsp;<u>Student Management</u></strong>
+    <strong>Name:<span id="web">Student Management</span></strong>
+    
     <br />
     <br />
-    <strong><u>Environment:</u>&nbsp;</strong>Angular8,
+   
+   <strong><span id="web">Environment:</span></strong><span id="angular"> Angular8,
     TypeScript,Javascript(ES6),HTML5,CSS,Bootstrap,GitHub,Desktop GitHub,Agile
-    and JIRA,IDE-VS Code
+    and JIRA,IDE-VS Code</span>
     <br />
     <br />
-    <strong>Team Size:</strong>06 &nbsp;&nbsp; &nbsp;&nbsp;
+    <strong>Team Size:</strong>06<span id="navigation"></span> 
     <strong>Duration:</strong>2021-1st-July till <u>present</u>
     <br />
     <br /><strong>Project Decription:</strong>
@@ -33,14 +49,14 @@
     <strong>Roles and Responsibilities:</strong>
     <br>
     <p>
-      &nbsp;&nbsp;&nbsp;&nbsp;Design and implemented the user interface using HTML5 and CSS <br>
-      &nbsp;&nbsp;&nbsp;&nbsp;Work closely with backend developer for code integration <br>
-      &nbsp;&nbsp;&nbsp;&nbsp;Identify and troubleshooting issues with front end code <br>
-      &nbsp;&nbsp;&nbsp;&nbsp;Worked on GIT as a version control <br>
-      &nbsp;&nbsp;&nbsp;&nbsp;Used JIRA for bug tracking <br>
-      &nbsp;&nbsp;&nbsp;&nbsp;Implemented project using Agile SCRUM methodology,Involved in daily stand up meetings,sprint showcase and sprint retrospective
+      <span id="ang"></span> Design and implemented the user interface using HTML5 and CSS <br>
+      <span id="ang"></span> Work closely with backend developer for code integration <br>
+      <span id="ang"></span>Identify and troubleshooting issues with front end code <br>
+      <span id="ang"></span>Worked on GIT as a version control <br>
+      <span id="ang"></span>Used JIRA for ug tracking <br>
+      <span id="ang"></span>Implemented project using Agile SCRUM methodology,Involved in daily stand up meetings,sprint showcase and sprint retrospective
       <br>
-      &nbsp;&nbsp;&nbsp;&nbsp;Involved in fixing technical issues
+      <span id="ang"></span>Involved in fixing technical issues
     </p>
   </body>
 </html>
