--- a/index.html
+++ b/index.html
@@ -10,21 +10,27 @@
       color:rgb(157, 14, 14);
        background-color:rgb(183, 208, 159)
      }
+     a{
+            margin-right: 40px;
+            text-decoration: none;
+        }
+        #homeLink{
+            margin-left: 10px;
+        }
    </style>
   </head>
   <body>
     <!-- Header Sectio -->
     <header>
-      <span id="header"> Name:Rucha Sharma&nbsp;&nbsp;&nbsp; Mobile:9214783436&nbsp;&nbsp;&nbsp;
-        Email:abc@gmail.com</span
-      >
+      <span id="header">Name:Rucha Sharma&nbsp;&nbsp;&nbsp; Mobile:9214783436&nbsp;&nbsp;&nbsp;
+        Email:abc@gmail.com</span>
     </header>
     <hr />
     <!-- Navigation Section -->
     <nav>
-      <a href="home.html" target="myframe">HOME</a> &nbsp;&nbsp;&nbsp;
-      <a href="teckStack.html" target="myframe">TECH STACK</a> &nbsp;&nbsp;&nbsp;
-      <a href="project.html" target="myframe">PROJECT</a> &nbsp;&nbsp;&nbsp;
+      <a href="home.html" target="myframe" id="homeLink">HOME</a> 
+      <a href="teckStack.html" target="myframe">TECH STACK</a> 
+      <a href="project.html" target="myframe">PROJECT</a> 
       <a href="education.html" target="myframe">EDUCATION</a> &nbsp;&nbsp;&nbsp;
       <a href="others.html" target="myframe">OTHERS</a> &nbsp;&nbsp;&nbsp;
     </nav>
@@ -40,7 +46,7 @@
       <!-- Fotter Section -->
       <a href="https://www.linkedin.com/login">LinkedIn</a>&nbsp;&nbsp;
       <a href="https://github.com/">GitHub</a>&nbsp;&nbsp;
-      <a href="https://www.naukri.com/">Naukari</a>&nbsp;&nbsp;
+      <a href="https://www.naukri.com/">Naukari</a>
     </footer>
   </body>
 </html>
