--- a/education.html
+++ b/education.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education</title>
+    <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Poppins&family=Roboto:wght@500;900&display=swap" rel="stylesheet">
     <style>
          h2{
           color:rgb(200, 79, 35);
-          
+          font-family: 'Poppins';
         }
         table,thead,th,td,tr,tbody{
             border-collapse: collapse;
