--- a/home.html
+++ b/home.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HOME</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto+Condensed:wght@400;800&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <style>
       h1{
         color: rgb(120, 69, 119) ;
-        background-color:rgb(227, 202, 202);}
+        background-color:rgb(227, 202, 202);
+      font-family:'Poppins';}
         #angular{
         color:rgb(222, 42, 42);
 
@@ -17,6 +23,14 @@
        color:rgb(157, 14, 14);
        background-color:rgb(183, 208, 159)
       };
+      li{
+        list-style-type:circle;
+        font-family: 'Roboto';
+      }
+      ul li{
+        font-family: 'Roboto';
+      }
+      
       
     </style>
   </head>
