--- a/others.html
+++ b/others.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Others</title>
+    <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Poppins&family=Roboto:wght@500;900&display=swap" rel="stylesheet">
     <style>
+      h2{
+        font-family: 'Poppins';
+    }
       body{
         border: 50px;
         border-collapse: collapse;
@@ -19,6 +23,7 @@
       }
       .nav{
         color: darkred;
+        font-family: 'Poppins';
       }
       li{
         margin: 10px;
@@ -27,7 +32,9 @@
       #name{
         font:message-box;
     font-style: revert;
-
+      }
+      ul li{
+        font-family: 'Roboto';
       }
     </style>
 </head>
@@ -41,10 +48,10 @@
   <strong><span class="nav">Adress:</span></strong>OM Vrindawan colony,Pune<br>
   <details>
     <summary>Family Details</summary>
-      <ul><span id="name">
+      <ul>
         <li>Father name:Tarka Sharma</li>
         <li>Mother name:Manika Sharma</li>
-      </span>
+     
       </ul>
   </details>
 
