--- a/project.html
+++ b/project.html
@@ -5,7 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto+Condensed:wght@400;800&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <style>
+      h2{
+        font-family: 'Poppins'; 
+      }
+      strong{
+        font-family: 'Poppins';
+      }
       #web{
         text-decoration: underline;
       }
@@ -15,9 +22,18 @@
       #navigation{
         padding-right:10px;
       }
-      #ang{
+      .ang{
         padding-right: 25px;
+        font-family: 'Roboto';
+        font-size: medium;
       }
+      p{
+        font-family: 'Roboto';
+      }
+     .age{
+      margin-left: 20px;
+     }
+      
     </style>
   </head>
   <body>
@@ -38,25 +54,26 @@
     <strong>Duration:</strong>2021-1st-July till <u>present</u>
     <br />
     <br /><strong>Project Decription:</strong>
-      This project is mainly used for student management in colleges,where It
+      <span class="ang">This project is mainly used for student management in colleges,where It
       help to manage student record like <br>
       student registration,student update
       information and see all his or her academic activities like score
-      card,attendence.
+      card,attendence.</span>
     <hr>
     <br>
     <br>
     <strong>Roles and Responsibilities:</strong>
     <br>
     <p>
-      <span id="ang"></span> Design and implemented the user interface using HTML5 and CSS <br>
-      <span id="ang"></span> Work closely with backend developer for code integration <br>
-      <span id="ang"></span>Identify and troubleshooting issues with front end code <br>
-      <span id="ang"></span>Worked on GIT as a version control <br>
-      <span id="ang"></span>Used JIRA for ug tracking <br>
-      <span id="ang"></span>Implemented project using Agile SCRUM methodology,Involved in daily stand up meetings,sprint showcase and sprint retrospective
+      <span class="age"></span> Design and implemented the user interface using HTML5 and CSS </span>  <br>
+      <span class="age"></span>Work closely with backend developer for code integration <br>
+      <span class="age"></span>Identify and troubleshooting issues with front end code <br>
+      <span class="age"></span>Worked on GIT as a version control <br>
+      <span class="age"></span>Used JIRA for ug tracking <br>
+      <span  class="age"></span>Implemented project using Agile SCRUM methodology,Involved in daily stand up meetings,sprint showcase and sprint retrospective
       <br>
-      <span id="ang"></span>Involved in fixing technical issues
+      <span class="age"></span>Involved in fixing technical issues
     </p>
+    
   </body>
 </html>
