--- a/teckStack.html
+++ b/teckStack.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto+Condensed:wght@400;800&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <style>
         h2{
           color: rgb(211, 15, 15); 
@@ -14,6 +17,9 @@
             border-collapse: collapse;
             padding: 20px;
             border: 2px solid black
+        }
+        h1{
+            font-family: 'Poppins';
         }
     </style>
 </head>
