--- a/education.html
+++ b/education.html
@@ -7,10 +7,16 @@
     <title>Education</title>
     <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Poppins&family=Roboto:wght@500;900&display=swap" rel="stylesheet">
     <style>
+        body table{
+            background-color: rgb(181, 236, 236);
+        }
          h2{
           color:rgb(200, 79, 35);
           font-family: 'Poppins';
-        }
+         background-position: 2px;
+         background-color: rgb(248, 226, 198);
+         }
+         
         table,thead,th,td,tr,tbody{
             border-collapse: collapse;
             padding: 20px;
