--- a/home.html
+++ b/home.html
@@ -11,6 +11,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto+Condensed:wght@400;800&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <style>
+      body{
+        background-color: rgb(140, 213, 213);
+       
+      }
       h1{
         color: rgb(120, 69, 119) ;
         background-color:rgb(227, 202, 202);
