--- a/others.html
+++ b/others.html
@@ -7,6 +7,9 @@
     <title>Others</title>
     <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Poppins&family=Roboto:wght@500;900&display=swap" rel="stylesheet">
     <style>
+      body{
+       background-color: rgb(245, 232, 217);
+      }
       h2{
         font-family: 'Poppins';
     }
