--- a/project.html
+++ b/project.html
@@ -7,6 +7,9 @@
     <title>Project</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto+Condensed:wght@400;800&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <style>
+      body{
+       background-color: rgb(209, 224, 209);
+      }
       h2{
         font-family: 'Poppins'; 
       }
