--- a/teckStack.html
+++ b/teckStack.html
@@ -9,14 +9,21 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto+Condensed:wght@400;800&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <style>
+        body table{
+            background-color: rgb(181, 236, 236);
+        }
         h2{
+           padding-left: 20px;
+           margin-left: 20px;
           color: rgb(211, 15, 15); 
           background-color:rgb(163, 205, 206); 
+         
         }
         table,thead,th,td,tr,tbody{
             border-collapse: collapse;
             padding: 20px;
-            border: 2px solid black
+            border: 2px solid black;
+           margin: 25px;
         }
         h1{
             font-family: 'Poppins';
